# LazyEnv-Fork

./: .gitignore  CMakeLists.txt  LazyEnv.rc  README.md  README_zh-CN.md  installer.cpp  installer.h  main.cpp  rollback.cpp  rollback.h  webview_host.cpp  webview_host.h
resources/: i18n.js  index.html  script.js  style.css
